compiler/testData/diagnostics/testsWithJsStdLib/native/externalFunInterface.kt
// RUN_PIPELINE_TILL: FRONTEND
external fun interface <!WRONG_EXTERNAL_DECLARATION!>I<!> {
    fun f()
}